--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,7 +18,7 @@
             "request": "launch",
             "mainClass": "io.github.gabrielpadilh4.Main",
             "projectName": "ssl-handshake-debugger",
-            "args": "-u https://github.com"
+            "args": "-s github.com"
         },
         {
             "type": "java",
@@ -26,7 +26,7 @@
             "request": "launch",
             "mainClass": "io.github.gabrielpadilh4.Main",
             "projectName": "ssl-handshake-debugger",
-            "args": "-u https://github.com -a"
+            "args": "-s github.com:443 -a"
         }
     ]
 }
