Create a script to package the application for release
closes #16

--- a/.gitignore
+++ b/.gitignore
@@ -155,6 +155,8 @@ buildNumber.properties
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
 
+ssl-handshake-debugger/**
+
 # Eclipse m2e generated files
 # Eclipse Core
 .project
